--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: Resumos de Matemática
 email: pedrovolpinacif@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Página dedicada ao compartilhamento gratuito de resumos de Matemática para vestibulares.
-baseurl: "/pedro-volpi.github.io" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://pedro-volpi.github.io"
 twitter_username: ""
 github_username:  pedro-volpi
