--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Resumos de Matemática
-email: pedrovolpinacif@gmail.com
+email: prof.pedro.volpi@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Página dedicada ao compartilhamento gratuito de resumos de Matemática para vestibulares.
 baseurl: "" # the subpath of your site, e.g. /blog
